# minecraft-building-assistance-game

./: .flake8  .gitignore  Dockerfile  README.md  index.html  lint.sh  malmo-0.37.0.0-cp39-cp39-macosx_11_0_arm64.whl  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  setup_mods.sh  setup_skins.sh  survival_mod.sh
.buildkite/: pipeline.yaml
.github/workflows/: build_wheels.yml  ci.yml  pypi.yml  test_readme_commands.yml
data/assistancezero_assistant/: config.json  params.json  params.pkl
data/example_assistant/: config.json  params.json  params.pkl
data/grabcraft/: 5262.json
mbag/: compatibility_utils.py
mbag/agents/: _mbag_action_distributionsmodule.c  action_distributions.py  hardcoded_agents.py  heuristic_agents.py  human_agent.py  mbag_agent.py
mbag/c_extensions/: _mbagmodule.c  action_distributions.c  action_distributions.h  blocks.c  blocks.h  constants.h  mcts.c  mcts.h
mbag/environment/: actions.py  blocks.py  config.py  human_actions.py  malmo.py  malmo_interface.py  mbag_env.py  schedule.py  state.py  types.py
mbag/evaluation/: episode.py  evaluator.py  metrics.py
mbag/rllib/: __init__.py  agents.py  alpha_zero.py  bc.py  callbacks.py  choice_env.py  convert_human_data_to_rllib.py  data_augmentation.py  distillation_prediction.py  evaluate.py  evaluate_human_modeling.py  gail.py  human_data.py  mixture_model.py  os_utils.py  planning.py  policies.py  ppo.py  rllib_env.py  rollout.py  sacred_utils.py  split_rollouts.py  torch_action_distributions.py  torch_models.py  train.py  training_utils.py  tune.py  tune_ppo.py
mbag/scripts/: __init__.py  calculate_metrics.py  convert_human_data_to_rllib.py  create_mixture_model.py  evaluate.py  evaluate_goal_prediction.py  evaluate_human_modeling.py  rollout.py  run_human_data_collection.py  run_human_with_robot.py  (+4 more)
stubs/: _mbag.pyi  _mbag_action_distributions.pyi
tests/: .unison.merge1-test_heuristic_agents.py  .unison.merge2-test_heuristic_agents.py  test_action_distributions.py  test_block_to_nearest_neighbors.py  test_blocks.py  test_checkpoints.py  test_convert_dogmatics.py  test_craftassist.py  test_data_augmentation.py  test_env.py  test_evaluator.py  test_experiments.py  test_goal_transforms.py  test_grabcraft.py  test_heuristic_agents.py  test_human.py  test_human_data.py  test_human_modeling.py  test_inventory.py  test_malmo.py  test_metrics.py  test_mixture_model.py  test_movement.py  test_planning.py  test_simple_goal_generators.py  test_torch_models.py  test_train.py
(+99 files in other folders)
